--- a/src/assets/scss/custom/pages/_job-list.scss
+++ b/src/assets/scss/custom/pages/_job-list.scss
@@ -2,6 +2,19 @@
 //job-list.scss
 //
 
+.form-button .nice-select {
+  width: 100%;
+  height: 39px;
+  line-height: 37px;
+  color: #3c4858;
+  margin-bottom: 1rem;
+  border: solid 1px #e6eaf4;
+}
+
+.form-button .nice-select.open .list {
+  width: 100%;
+}
+
 .job-list-menu {
   background-color: var(--#{$prefix}body-bg);
   box-shadow: var(--#{$prefix}box-shadow);
@@ -148,6 +161,7 @@
 
 .job-list-header {
   .registration-form-box {
+
     .form-control,
     .form-select {
       padding: 6px 8px 6px 45px;
@@ -237,6 +251,7 @@ body[data-bs-theme="dark"] {
 }
 
 @media (min-width: 640px) {
+
   .choices__list--dropdown .choices__item--selectable,
   .choices__list[aria-expanded] .choices__item--selectable {
     padding: 0;
