--- a/src/assets/scss/custom/pages/_profile.scss
+++ b/src/assets/scss/custom/pages/_profile.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.selected-level {
+    background-color: #ffcc00; // Đặt màu nền của mức độ đã chọn tại đây
+}
+
 .profile-document {
     .profile-document-list {
         .icon {
@@ -26,7 +30,7 @@
     }
 }
 
-.profile-content-nav{
+.profile-content-nav {
     &.nav-pills {
         .nav-item {
             .nav-link {
@@ -36,6 +40,7 @@
                 border-radius: 0;
                 font-size: 16px;
                 padding: 12px 26px;
+
                 &.active {
                     color: var(--#{$prefix}primary);
                     background-color: transparent !important;
