--- a/src/pages/Jobs/HiringRequestDetail/index.css
+++ b/src/pages/Jobs/HiringRequestDetail/index.css
@@ -350,9 +350,6 @@
   }
   
   
-
-
-  
   .devmatch-level {
     height: 100%;
     /* background-color: hsl(140, 75%, 37%); */
@@ -801,4 +798,158 @@
   border: 3px solid #02AF74;
   border-radius: 6px;
   transition: all 0.375s;
+}
+
+
+
+
+/* /////////////////////////////////// */
+.checkbox-wrapper-type .round {
+  position: relative;
+}
+
+.checkbox-wrapper-type .round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  display: block;
+}
+
+/* .checkbox-wrapper-18 .round label:after {
+ 
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 3px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 9px;
+  transform: rotate(-45deg);
+  width: 12px;
+} */
+
+
+
+
+.checkbox-wrapper-type .round input[type="checkbox"] {
+  visibility: hidden;
+  display: none;
+  opacity: 0;
+}
+
+.checkbox-wrapper-type .round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.checkbox-wrapper-type .round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
+
+/* //////////////////////////////////////////// */
+
+.checkbox-wrapper-level .round {
+  position: relative;
+}
+
+.checkbox-wrapper-level .round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  display: block;
+}
+
+/* .checkbox-wrapper-18 .round label:after {
+ 
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 3px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 9px;
+  transform: rotate(-45deg);
+  width: 12px;
+} */
+
+
+
+
+.checkbox-wrapper-level .round input[type="checkbox"] {
+  visibility: hidden;
+  display: none;
+  opacity: 0;
+}
+
+.checkbox-wrapper-level .round input[type="checkbox"]:checked + label {
+  background-color: #66bb6a;
+  border-color: #66bb6a;
+}
+
+.checkbox-wrapper-level .round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
+
+
+
+
+
+
+/* /////////////////////////////////////////// */
+
+/* bar-Salary */
+.devmatching-bar-salary {
+  width: 70%;
+  height: 5px;
+  background-color: #e0e0e0;
+  position: relative;
+  overflow: hidden;
+  margin-top: 2px; /* Thêm khoảng cách giữa văn bản và thanh tiến trình */
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+ 
+}
+
+
+.devmatch-level-salary {
+  height: 100%;
+  
+  /* background-color: hsl(140, 75%, 37%); */
+  position: relative;
+  overflow: hidden;
+  transition: width 0.5s ease; /* Để có hiệu ứng chuyển động */
+  border-radius: 8px;
+  
+}
+
+/* bar-skill */
+.devmatching-bar-skill {
+  width: 70%;
+  height: 5px;
+  background-color: #e0e0e0;
+  position: relative;
+  overflow: hidden;
+  margin-top: 2px; /* Thêm khoảng cách giữa văn bản và thanh tiến trình */
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+ 
+}
+
+
+.devmatch-level-skill {
+  height: 100%;
+  /* background-color: hsl(140, 75%, 37%); */
+  position: relative;
+  overflow: hidden;
+  transition: width 0.5s ease; /* Để có hiệu ứng chuyển động */
+  border-radius: 8px;
+  
 }
