--- a/src/assets/scss/custom/pages/_job-details.scss
+++ b/src/assets/scss/custom/pages/_job-details.scss
@@ -2,7 +2,8 @@
 //job-details.scss
 //
 
-.job-overview, .candidate-contact-details {
+.job-overview,
+.candidate-contact-details {
   .icon {
     height: 46px;
     line-height: 46px;
@@ -19,15 +20,37 @@
   margin-left: 24px;
 }
 
+.Select {
+  position: relative;
+  z-index: 4;
+  /* Số cao hơn so với các thành phần khác */
+}
+
+/* Nếu có nhiều loại danh sách thả xuống, bạn có thể cần xác định cụ thể hơn */
+.Select--level {
+  z-index: 5;
+  /* Số cao hơn so với các danh sách thả xuống khác */
+}
+
+.Select--level-high {
+  z-index: 6;
+}
+
+.Select--level-highest {
+  z-index: 7;
+}
+
 .job-details-menu {
-    position: sticky;
-    top: 120px;
+  position: sticky;
+  top: 120px;
+
   .nav-link {
     color: $dark;
     border: 1px solid $gray-200;
     margin-top: 15px;
     padding: 22px;
     cursor: pointer;
+
     &.active {
       color: $dark;
       background-color: rgba(var(--#{$prefix}primary-rgb), 0.07);
@@ -40,6 +63,7 @@
     padding-left: 25px;
     position: relative;
     margin-top: 12px;
+
     i {
       color: $success;
       font-size: 12px;
