done design assign task screen

--- a/src/assets/scss/custom/components/_helper.scss
+++ b/src/assets/scss/custom/components/_helper.scss
@@ -242,4 +242,8 @@
   .custom-container-hiring-detail {
     max-width: 1350px  !important;
   }
+
+  .custom-container-assign-task {
+    max-width: 1400px !important;
+  }
 }
