--- a/src/assets/scss/custom/components/_helper.scss
+++ b/src/assets/scss/custom/components/_helper.scss
@@ -243,6 +243,11 @@
     max-width: 1350px  !important;
   }
 
+  .custom-container-developer {
+    max-width: 1518px  !important;
+  }
+
+
   .custom-container-assign-task {
     max-width: 1400px !important;
   }
