design new list interview , fix bug

--- a/src/pages/Jobs/HiringRequestDetail/index.css
+++ b/src/pages/Jobs/HiringRequestDetail/index.css
@@ -925,7 +925,7 @@
   display: block;
 }
 
-/* .checkbox-wrapper-18 .round label:after {
+/* .checkbox-wrapper-level .round label:after {
  
   border-top: none;
   border-right: none;
