fix screen project list

--- a/src/assets/scss/custom/components/_helper.scss
+++ b/src/assets/scss/custom/components/_helper.scss
@@ -251,4 +251,8 @@
   .custom-container-assign-task {
     max-width: 1400px !important;
   }
+
+  .custom-container-project-detail {
+    max-width: 100% !important;
+  }
 }
