--- a/src/pages/Admin/index.css
+++ b/src/pages/Admin/index.css
@@ -877,19 +877,19 @@
   display: block;
 }
 
-/* .checkbox-wrapper-18 .round label:after {
- 
+.checkbox-wrapper-type .round label:after {
+  border: 2px solid #fff;
   border-top: none;
   border-right: none;
   content: "";
-  height: 3px;
-  left: 7px;
+  height: 5px;
+  left: 5px;
   opacity: 0;
   position: absolute;
-  top: 9px;
+  top: 7px;
   transform: rotate(-45deg);
-  width: 12px;
-} */
+  width: 9px;
+}
 
 
 
@@ -925,19 +925,20 @@
   display: block;
 }
 
-/* .checkbox-wrapper-level .round label:after {
+.checkbox-wrapper-level .round label:after {
  
+  border: 2px solid #fff;
   border-top: none;
   border-right: none;
   content: "";
-  height: 3px;
-  left: 7px;
+  height: 5px;
+  left: 5px;
   opacity: 0;
   position: absolute;
-  top: 9px;
+  top: 7px;
   transform: rotate(-45deg);
-  width: 12px;
-} */
+  width: 9px;
+}
 
 
 
