--- a/src/assets/scss/custom/pages/_about.scss
+++ b/src/assets/scss/custom/pages/_about.scss
@@ -147,6 +147,19 @@
   z-index: 9999;
 }
 
+.overlayNoCloud {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  // background-color: rgba(212, 200, 200, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
 .spinner {
   width: 175px;
   height: 80px;
@@ -161,6 +174,35 @@
 }
 
 .spinner::after {
+  content: '';
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: 20px;
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 5px solid transparent;
+  border-color: #028C5D transparent;
+  /* Chỉnh đổi màu đỏ (#FF0000) ở đây */
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.spinnerNoCloud {
+  width: 175px;
+  height: 80px;
+  display: block;
+  margin: auto;
+  background-size: 50px 50px, 100px 76px, 50px 50px, 120px 40px;
+  background-position: 0px 30px, 37px 0px, 122px 30px, 25px 40px;
+  background-repeat: no-repeat;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.spinnerNoCloud::after {
   content: '';
   left: 0;
   right: 0;
